--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -24,7 +24,7 @@
 }
 
 .logo:hover {
-  color: #ffea00;
+  color: #06a3dd;
 }
 
 /* 🔹 NAVIGATION */
@@ -49,7 +49,7 @@
 }
 
 .nav-button:hover {
-  color: #ffea00;
+  color: #06a3dd;
 }
 
 /* 🔹 SEARCH BAR (Desktop Only) */
