--- a/src/styles/TrendingStreams.css
+++ b/src/styles/TrendingStreams.css
@@ -2,7 +2,7 @@
 .trending-streams {
     width: 100% ; 
     padding: 20px;
-    color: #fff;
+    color: black;
     border-radius: 10px;
     box-shadow:none;
     overflow: hidden;
@@ -89,8 +89,8 @@
   .stream-info h3 {
     font-size: 0.8rem;
     font-weight: bold;
-    color: #ffcc00;
-    text-shadow: 0px 0px 10px #ffcc00;
+    color: #06a3dd;
+    text-shadow: 0px 0px 10px #06a3dd;
     font-family: 'Press Start 2P', sans-serif; /* RETRO + READABLE */
     letter-spacing: 0.8px;
     text-align: center;
@@ -99,7 +99,7 @@
   
   .stream-info p {
     font-size: 0.9rem;
-    color: #ddd;
+    color: black;
     margin: 5px 0;
   }
   
@@ -169,7 +169,7 @@
     align-items: center;
     margin: 20px auto;
     padding: 12px 20px;
-    background: linear-gradient(90deg, #ff00ff, #ffcc00);
+    background: linear-gradient(90deg, #ff00ff, #06a3dd);
     color: #000;
     font-size: 1rem;
     font-weight: bold;
